# bcgx_churn_prediction

./: .gitignore  EDA_and_modeling.ipynb  README.md  pyproject.toml
